First step on fixing cards spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@
   display: flex;
   width: 50%;
   margin: auto;
+  flex-wrap: wrap;
   
 }
 
@@ -20,6 +21,7 @@ h1 {
 
 /*Necessary on positioning sides*/
 .game-card-inner {
+
     position: relative;
     width: 100%;
     height: 100%;
